[package]
name = "wikidot-path"
description = "Simple library to provide Wikidot-compatible path parsing"
repository = "https://github.com/scpwiki/wikidot-path"
readme = "README.md"
license = "MIT"
keywords = ["wikidot", "path", "parsing"]

version = "0.2.5"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2021" # this refers to the Cargo.toml version

[features]
default = []
serde-derive = ["serde"]

[dependencies]
cfg-if = "1"
lazy_static = "1"
maplit = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"], optional = true }
wikidot-normalize = "0.10"
