[package]
name = "wikidot-path"
description = "Simple library to provide Wikidot-compatible path parsing"
repository = "https://github.com/scpwiki/wikidot-path"
readme = "README.md"
license = "MIT"
keywords = ["wikidot", "path", "parsing"]

version = "0.4.1"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2021" # this refers to the Cargo.toml version

[features]
default = []
serde-derive = ["serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
wikidot-normalize = "0.11"

[dev-dependencies]
maplit = "1"
