[package]
name = "wikidot-path"
description = "Simple library to provide Wikidot-compatible path parsing"
repository = "https://github.com/scpwiki/wikidot-path"
readme = "README.md"
license = "MIT"
keywords = ["wikidot", "path", "parsing"]

version = "0.5.0"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2021" # this refers to the Cargo.toml version

[dependencies]
unicase = "2"
wikidot-normalize = "0.11"

[dev-dependencies]
maplit = "1"
